Fixes #339, align z-index between tour, graph, and info sidebar
This change prevents the Tour step from overlapping the Info Sidebar but keeps it above the Fire History Graph.

--- a/app/styles/map.scss
+++ b/app/styles/map.scss
@@ -201,6 +201,10 @@
   background-color: #fff;
 }
 
+.leaflet-sidebar {
+  z-index: 4500;
+}
+
 .popover[class*="tour-"] {
-  z-index: 6000;
+  z-index: 4000;
 }
